--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -41,6 +41,58 @@
   sale-id: 93854
   domestic: true
 
+- title: Portals Hills Boutique Hotel
+  id: portals-hills-boutique-hotel
+  location: Portals Nous, Mallorca
+  description: Un cinco estrellas en Mallorca, cerca de la playa, con desayuno, late check out y extras exclusivos
+  price: 195
+  price-description: por suite por noche
+  saved: 42
+  expires: 2019/05/21
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
+  link: https://es.secretescapes.com/portals-hills-boutique-hotel-mallorca-es-pa/sale
+  sale-id: 93893
+  domestic: true
+
+- title: Bikini Island & Mountain Hotel Port de Soller
+  id: bikini-island-and-mountain-hotel-port-de-soller
+  location: Mallorca
+  description: Lujo chic y bohemio en el puerto de Sóller, con desayuno, un cóctel y extras
+  price: 113
+  price-description: por habitación por noche
+  saved: 26
+  expires: 2019/05/21
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94158/4aa7b8e7_3c23_4b07_b11e_04904a21a247.jpg
+  link: https://es.secretescapes.com/bikini-island-and-mountain-hotel-port-de-soller-palma-de-mallorca-esp/sale
+  sale-id: 94158
+  domestic: true
+
+- title: H10 Palacio Colomera
+  id: h10-palacio-colomera
+  location: Córdoba
+  description: Un cuatro estrellas a estrenar en el corazón histórico de Córdoba, con desayuno y extras
+  price: 84
+  price-description: por habitación por noche
+  saved: 36
+  expires: 2019/05/21
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93925/2284ae36_fbc7_4540_a8e5_baa5f06c064e.jpg
+  link: https://es.secretescapes.com/h10-palacio-colomera-cordoba-es/sale
+  sale-id: 93925
+  domestic: true
+
+- title: H10 Casa de la Plata
+  id: h10-casa-de-la-plata
+  location: Sevilla
+  description: Un hotel de cuatro estrellas en el corazón de Hispalis, con desayuno incluido y extras
+  price: 84
+  price-description: por habitación por noche
+  saved: 44
+  expires: 2019/05/21
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94159/1bb36bfb_5f56_42cb_b8c6_d16e7460ed4c.jpg
+  link: https://es.secretescapes.com/h10-casa-de-la-plata-sevilla-esp/sale
+  sale-id: 94159
+  domestic: true
+
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
@@ -77,7 +129,7 @@
   description: Régimen de media pensión y lujo cinco estrellas en Cerdeña. Incluye extras
   price: 208
   price-description: por habitación por noche
-  saved: 62
+  saved: 64
   expires: 2019/05/14
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/17278/e43ecae6_3668_4fec_bb58_361a8589f81c.jpg
   link: https://es.secretescapes.com/colonna-pevero-cerdena-es/sale
@@ -108,4 +160,30 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
   link: https://es.secretescapes.com/chateau-monfort-milan-espana/sale
   sale-id: 93672
+  domestic: false
+
+- title: First Hotel Grims Grenka
+  id: first-hotel-grims-grenka
+  location: Oslo
+  description: Descubre todos los rincones de Oslo desde un céntrico hotel, con desayuno incluido
+  price: 143
+  price-description: por habitación por noche
+  saved: 37
+  expires: 2019/05/14
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10585/0eaf785a_d63d_41b5_b063_24d161b46e66.jpg
+  link: https://es.secretescapes.com/first-hotel-grims-grenka-oslo-es/sale
+  sale-id: 93678
+  domestic: false
+
+- title: Clarion Collection Savoy
+  id: clarion-collection-savoy
+  location: Oslo
+  description: Un acogedor cuatro estrellas en el corazón de Oslo, en régimen de media pensión
+  price: 106
+  price-description: por habitación por noche
+  saved: 30
+  expires: 2019/05/21
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94237/91c6b0f3_72c7_457d_a410_dda53c9135ee.jpg
+  link: https://es.secretescapes.com/clarion-collection-savoy-oslo-esp/sale
+  sale-id: 94237
   domestic: false
